# Gjackctl

./: .anjuta_sym_db.db  Makefile.am  README  README.md  configure.ac
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
src/: #gjackctl_settings.glade#  #server_settings.glade#  .anjuta_sym_db.db  CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  alsa_device_names.c  alsa_device_names.c~  alsa_device_names.h  clocksource.c  clocksource.h  config_file_init.c  config_file_init.h  config_file_input.c  config_file_input.h  connections.c  connections.h  create_jack_client.c  create_jack_client.h  display.c  display.h  driver_alsa_names.c  driver_alsa_names.h  drivers.c  drivers.h  dsp_load.c  dsp_load.h  frames.c  frames.h  get_arg_vector.c  get_arg_vector.h  get_jack_gpid.c  get_jack_gpid.h  gjackctl  gjackctl-adwaita-dark.css  gjackctl.desktop  gjackctl_settings.c  gjackctl_settings.c~  gjackctl_settings.glade  (+58 more)
src/.anjuta/session/: anjuta.session  dock-layout.xml
src/.deps/: gjackctl-alsa_device_names.Po  gjackctl-clocksource.Po  gjackctl-config_file_init.Po  gjackctl-config_file_input.Po  gjackctl-connections.Po  gjackctl-create_jack_client.Po  gjackctl-display.Po  gjackctl-drivers.Po  gjackctl-dsp_load.Po  gjackctl-frames.Po  gjackctl-get_jack_gpid.Po  gjackctl-gjackctl_settings.Po  gjackctl-jack_log.Po  gjackctl-jack_ports.Po  gjackctl-jack_server_init.Po  gjackctl-label_toggle_attr.Po  gjackctl-main.Po  gjackctl-period.Po  gjackctl-port_max.Po  gjackctl-rt_priority.Po  gjackctl-sample_rate.Po  gjackctl-server_name.Po  gjackctl-server_switch.Po  gjackctl-timeout.Po  gjackctl-toggle_midi.Po  gjackctl-toggle_no_memlock.Po  gjackctl-toggle_no_zombies.Po  gjackctl-toggle_rt.Po  gjackctl-toggle_unlock_libs.Po  gjackctl-toggle_verbose.Po
