AC_INIT([gjackctl], [0.1.84])

# Required autoconf version
AC_PREREQ([2.69])

# Dependencies
GLIB_REQUIRED=2.42.2
GTK_REQUIRED=3.14.0
#CLUTTER_REQUIRED=1.20
#CLUTTER_GTK_REQUIRED=1.6.0
JACK_REQUIRED=0.124.1
LIBCONFIG_REQUIRED=1.4.9
ALSA_REQUIRED=1.0.28

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build])
AM_INIT_AUTOMAKE([1.15 subdir-objects -Wall -Werror])
AC_CONFIG_FILES([Makefile])
AC_PROG_CC

PKG_CHECK_MODULES([GLIB], [glib-2.0 >= $GLIB_REQUIRED])
PKG_CHECK_MODULES([GTK3], [gtk+-3.0 >= $GTK_REQUIRED])
#PKG_CHECK_MODULES([CLUTTER], [clutter-1.0 >= $CLUTTER_REQUIRED])
#PKG_CHECK_MODULES([CLUTTER_GTK], [clutter-gtk-1.0 >= $CLUTTER_GTK_REQUIRED])
PKG_CHECK_MODULES([JACK1], [jack >= $JACK_REQUIRED])
PKG_CHECK_MODULES([LIBCONFIG], [libconfig >= $LIBCONFIG_REQUIRED])
PKG_CHECK_MODULES([ALSA], [alsa >= $ALSA_REQUIRED])

AC_OUTPUT
